# rust-in-php

./: .gitignore  Cargo.toml  README.md  composer.json  ffi.php  mini_data.csv
_ffi/: .rustc_info.json  Cargo.toml  ffi.php
_ffi/benches/: bench.rs
_ffi/src/: lib.rs
extension/: Cargo.toml  extension.php
extension/benches/: bench.rs
extension/src/: lib.rs
src/: lib.rs  main.rs
