[package]
name = "mytrain"
version = "0.1.0"
edition = "2021"

[lib]
name = "mytrain"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
libc = "0.2.153"
serde_json = { version = "1.0.113", features = [] }
