[package]
name = "extension"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.34"
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
libc = "0.2.153"
serde_json = { version = "1.0.113", features = [] }
ext-php-rs = {version = "0.11.2", features = ["anyhow"]}

[dev-dependencies]
cargo-php = "*"
